--- a/server/package.json
+++ b/server/package.json
@@ -40,6 +40,7 @@
     "dotenv": "^16.4.5",
     "fastify": "^4.26.2",
     "get-jwks": "^9.0.1",
+    "openai": "^4.56.0",
     "ulid": "^2.3.0",
     "velona": "^0.8.0",
     "ws": "^8.18.0",
