--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "stylelint": "^16.6.1",
     "stylelint-config-recess-order": "^5.0.1",
     "stylelint-config-standard": "^36.0.1",
+    "ts-node": "^10.9.2",
     "typescript": "^5.5.3",
     "typescript-eslint": "^7.16.1",
     "vite-tsconfig-paths": "^4.3.2",
@@ -51,6 +52,7 @@
     "node": ">=20.0.0"
   },
   "dependencies": {
+    "dotenv": "^16.4.5",
     "iniad-api-client": "^0.2.11",
     "openai": "^4.56.0"
   }
